syntax = "proto3";

package resiliency;

// import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "protogen/go/resiliency";

message ResiliencyRequest {
  int32 min_delay_second = 1 
  [
    json_name = "min_delay_second",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Minimum delay in seconds",
      format: "integer",
      example: "2"
    }
  ];
  int32 max_delay_second = 2 [
    json_name = "max_delay_second",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Maximum delay in seconds",
      format: "integer",
      example: "7"
    }
  ];
  repeated uint32 status_codes = 3 [
    json_name = "status_codes",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Status codes to return"
    }
  ];
}

message ResiliencyResponse  {
  string response = 1
  [
    json_name = "response",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Response"
    }
  ];
  uint32 status_code = 2 [
    json_name = "status_code",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      description: "Status code"
    }
  ];
}